--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+psychopy (1.74.02.dfsg-1) unstable; urgency=low
+
+  * New bugfix of a fresh upstream feature release.
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Mon, 06 Aug 2012 10:39:21 -0400
+
 psychopy (1.73.06.dfsg-1) unstable; urgency=low
 
   * New upstream bugfix release (released April 2012)
