--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-psychopy (1.74.02.dfsg-1) experimental; urgency=low
+psychopy (1.74.03.dfsg-1) experimental; urgency=low
+
+  * New upstream bugfix release
+
+ -- Yaroslav Halchenko <debian@onerussian.com>  Tue, 14 Aug 2012 13:05:32 -0400
+
+psychopy (1.74.02.dfsg-1) UNRELEASED; urgency=low
 
   * New bugfix of a fresh upstream feature release.
   * New patches:
